<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F3F5">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarTipTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6200ED">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/header_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tip_time"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbarTipTime"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <EditText
            android:id="@+id/inputNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/cost_of_service"
            android:importantForAutofill="no"
            android:inputType="phone" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputNumber">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_was_the_service"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazing_20"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_18"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok_15" />

        </RadioGroup>

        <RelativeLayout
            android:id="@+id/switchGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroup">

            <TextView
                android:id="@+id/textSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/round_up_tip"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                />

            <Switch
                android:id="@+id/togleSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/textSwitch"
                tools:ignore="UseSwitchCompatOrMaterialXml"
                android:layout_alignParentEnd="true">
            </Switch>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/buttonGroup"
            android:layout_below="@id/switchGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/buttonCalculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                />
            <TextView
                android:id="@+id/amountHint"
                android:layout_below="@id/buttonCalculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_amount"
                android:layout_alignParentEnd="true"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/imageGroup"
            android:layout_below="@id/buttonGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageCalculator"
                android:layout_centerHorizontal="true"
                android:layout_width="218dp"
                android:layout_height="167dp"
                android:layout_marginTop="41dp"
                android:src="@drawable/calculator_image"
                android:contentDescription="@string/imagecalculator" />
            <TextView
                android:layout_below="@id/imageCalculator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/tip_calculator"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textSize="30sp"/>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>